# project47_last_mile_logistics

./: .gitignore  Installation.md  Instructions for OSRM Server.md  README.md  analysis.ipynb  current_results.json  current_results2.json  experiments_4_time_windows_arrival_20.json  experiments_no_time_arrival_20.json  experiments_time_arrival_20.json  meta_info.json  nz_map  nz_map.html  osrm.sh  pyproject.toml  setup.py  structure.drawio  test.py
Routing/: Manifest.toml  Project.toml  README.md
data/: TOLLaddress_coords.csv  TOLLaddresses.csv  Toll_CHC_November_Sample_Data.csv  dm.csv  dm_orsm.csv  example_sim_log.json  fac_addresses.csv  fac_coord.csv  random_subset.csv  simdata.json  tm_osrm.csv
experiments/: README.md  ex1.py  multiaddress.py  multicollection.py  no_time_windows.py
julia_stuff/: Project.toml  README.md
ortools/: scratch.py
ortools_benchmarks/: Untitled.ipynb  current_results3.json  current_results4.json  full_problem.py  full_problem.py.save  ortools_analysis.ipynb  rerouting.py  scratch.ipynb
project47/: customer.py  data.py  data1.py  dm.csv  flp_data.py  flp_data_vis.py  flp_func.py  flp_vis.ipynb  flp_visualisation.py  model.py  multiday_simulation.py  random_subset.csv  routing.py  scratch.py  simulation.py  t.py  tm.csv
project47.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: README.md  addresses.csv  data.py  scratch.ipynb.REMOVED.git-id  test_customer_tw.py  test_data.py  test_data_ortools.py  test_multiday.py  test_multiday_k.py  test_new.json  test_orsm.json  test_osmnx.py  test_plotting.py  test_reroute_sim_tw.py  (+6 more)
(+593 files in other folders)
